tests/baselines/reference/cannotInvokeNewOnErrorExpression.errors.txt
==== tests/cases/compiler/cannotInvokeNewOnErrorExpression.ts (2 errors) ====
    module M
    {
        class ClassA {}
    }
    var t = new M.ClassA[];
                        ~~
!!! cannotInvokeNewOnErrorExpression.ts(5,21): error TS2068: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
                  ~~~~~~
!!! cannotInvokeNewOnErrorExpression.ts(5,15): error TS2094: The property 'ClassA' does not exist on value of type 'typeof M'.